sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ';' expected but ')' found.
public void bubbleSort(list Array))  {
                                  ^